feat: config build and update docs :fire:
